# TradeWare

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/TradeWare/: main.py
src/trade_ware/: main.py
src/trade_ware/core/: config.py
src/trade_ware/database/: session.py
src/trade_ware/database/tests/: test_session.py
